--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,2 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css?family=Nunito);table.table tbody tr td img.thumbnail {
+  width: 5em;
+}
 
